track progress of user endpoint
